--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,10 @@
 	<classpathentry exported="true" kind="lib" path="lib/mybatis-3.4.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mybatis-generator-core-1.3.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.6-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mybatis-3.4.6.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mybatis-generator-core-1.3.7.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.6-bin.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
